crates/canvas-cli/tests/e2e/snapshots/open_assignment_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
assignment <origin>/courses/60100/assignments/60009 launched=false
--- stderr ---
