crates/canvas-cli/tests/e2e/snapshots/open_file_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "id": "60501",
    "launched": false,
    "target_kind": "file",
    "url": "<origin>/files/60501"
  },
  "schema": "canvas-cli/open@1",
  "warnings": []
}
