crates/canvas-cli/tests/e2e/snapshots/open_file_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
file <origin>/files/501 launched=false
--- stderr ---
