crates/canvas-cli/tests/e2e/snapshots/open_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
course <origin>/courses/60100 launched=false
--- stderr ---
