crates/canvas-cli/tests/e2e/snapshots/precedence_usage_before_resolution.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 2
--- stdout ---
--- stderr ---
error: the argument '--offline' cannot be used with '--fresh'

Usage: canvas course --offline --json --color <COLOR> <COURSE>

For more information, try '--help'.
