crates/canvas-cli/tests/e2e/snapshots/quiz_questions_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
attempt 1 of quiz 60101
attempt ends 2040-09-11T14:30:00Z

Q60901  multiple_choice_question  2 pts  Synthetic Quiz Submission Questions
Synthetic exercise: sort the symbols X, Y, and Z.
  [64811] Synthetic option 15
  [64812] Synthetic option 6
  [64813] Synthetic option 13
  [64814] Synthetic option 6

Q60902  essay_question  4 pts  Synthetic Quiz Submission Questions
Synthetic exercise: sort the symbols X, Y, and Z.

Q60903  true_false_question  2 pts  Synthetic Quiz Submission Questions
Synthetic exercise: sort the symbols X, Y, and Z.
  [64901] Synthetic option 4
  [64902] Synthetic option 5

Q60904  multiple_answers_question  2 pts  Synthetic Quiz Submission Questions
Synthetic exercise: sort the symbols X, Y, and Z.
  [65101] Synthetic option 34
  [65102] Synthetic option 25
  [65103] Synthetic option 30
  [65104] Synthetic option 22
--- stderr ---
