crates/canvas-cli/tests/e2e/snapshots/quiz_submit_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "quizzes",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "course:60100",
      "source": "network",
      "stale": false
    }
  ],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 8,
    "cost": null,
    "storage": 0
  },
  "result": {
    "acknowledged_at": null,
    "attachments": [],
    "attribution": "accepted",
    "delivery": "observable",
    "error": null,
    "journal_id": "00000000-0000-4000-8000-00000000000j",
    "kind": "quiz_submit",
    "not_posted_evidence": null,
    "outcome": "ok",
    "plan_id": "<id>",
    "post_status": 200,
    "readback": null,
    "receipt_id": "00000000-0000-4000-8000-00000000000r",
    "replayed": false,
    "response": {
      "attachment_ids": [],
      "body_sha256": null,
      "conversation_id": null,
      "created_at": "<clock>",
      "created_at_local": "2040-09-09T13:05:12-04:00",
      "id": "60501",
      "response_sha256": "15a94441bd3291365a3384d8a32df9313945c54411018145f5880f84dd5b5802",
      "user_id": "60001"
    },
    "response_kind": null,
    "server_match": null,
    "state": "posted",
    "subject": null,
    "target": {
      "conversation_id": null,
      "conversation_subject": null,
      "course_code": null,
      "course_id": "60100",
      "kind": "quiz_submit",
      "parent_entry_id": null,
      "quiz_id": "60101",
      "quiz_title": "Synthetic Quiz",
      "recipient_names": [],
      "recipients": [],
      "topic_id": null,
      "topic_title": null
    },
    "text": {
      "input_sha256": "38abaaef574bb0cfde16c9a1fb4712bcee692152a8e030a867716c2e4ca9e0ab",
      "sent_sha256": "38abaaef574bb0cfde16c9a1fb4712bcee692152a8e030a867716c2e4ca9e0ab",
      "transform": "json"
    }
  },
  "schema": "canvas-cli/operation@1",
  "warnings": []
}
